# LabWork_3.5

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: blank.yml
lib/: CMakeLists.txt  TList.h
main/: CMakeLists.txt  main.cpp
maintest/: CMakeLists.txt  testList.cpp  test_main.cpp
